JEDIT 4.1 VERSION HISTORY

* Version 4.1pre7

+ Bug Fixes

- The action "Insert Tab and Indent" was broken.

* Version 4.1pre6

Thanks to Cullen Linn, Giulio Piancastelli, John Perry, Joshua Miller,
Kris Kopicki, Marcelo Vanzin, Peter Cox, Rex Young, Ryan Grove,
Rudolf Widmann and Steve Snider for contributing to this release.

+ Help System Changes:

- The user's guide, FAQ, and plugin documentation is now searchable. An
  in-memory index is built the first time a search is performed during a
  jEdit session. Currently, the search engine is very simple and only
  performs whole-word matching (so searching for "auto save" and
  "autosave" will yield different results). Results are ranked according
  to how many times that word appears in the document. Searching for
  multiple words returns all documents that contain at least one of the
  words, however documents containing multiple search terms are ranked
  higher.

+ Editing Changes:

- The "Indent on Enter" and "Indent on Tab" options are no longer.
  (Actually, the former was removed in pre5, but I forgot to mention it
  in the changelog).

  The new way to change these options is to just rebind the ENTER and
  TAB keys in the Shortcuts option pane. There are several actions they
  can be bound to:

  Insert Enter
  Insert Enter and Indent
  Insert Tab
  Insert Tab and Indent
  Indent Line (if you want TAB to indent anywhere in a line, not just in
  the leading whitespace, like in emacs).

+ Syntax Highlighting Changes:

- Added .NET CIL syntax highlighting (Cullen Linn).
- Added Maple syntax highlighting (John Perry).
- Added NSIS2 syntax highlighting (Ryan Grove).
- Updated ColdFusion syntax highlighting (Joshua Miller).
- Updated Fortran syntax highlighting (Yifan Song).
- Updated PL-SQL syntax highlighting (Steve Snider).
- Updated Prolog syntax highlighting (Giulio Piancastelli)

+ Miscellaneous Changes:

- Holding down Alt while scrolling with the wheel mouse now moves the